[package]
name = "SpatialBenches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rstar = "0.10.0"
kd-tree = "0.5.1"
kdtree = "0.7.0"
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
plotters = "0.3.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "spatial_benches"
path = "benches/mod.rs"
harness = false
